# rustchat

./: .gitignore  README.md
.claude/: settings.local.json
backend/: .env.example  Cargo.toml
backend/migrations/: 20260423000000_init_storage.sql  20260423010000_create_chat_core_tables.sql  20260510010000_enforce_private_session_uniqueness.sql  20260513010000_create_files_table.sql
backend/src/: app.rs  integration_tests.rs  main.rs  router.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs  types.rs
backend/src/common/: config.rs  error.rs  logging.rs  mod.rs  response.rs
backend/src/connection/: handler.rs  manager.rs  mod.rs  protocol.rs
backend/src/conversation/: dto.rs  handler.rs  model.rs  repo.rs  routes.rs  service.rs
backend/src/file/: dto.rs  handler.rs  mod.rs  model.rs  repo.rs  routes.rs  service.rs
backend/src/message/: dto.rs  handler.rs  mod.rs  model.rs  repo.rs  routes.rs  service.rs
backend/src/middleware/: auth.rs  logging.rs
backend/src/session/: dto.rs  handler.rs  mod.rs  model.rs  repo.rs  routes.rs  service.rs
backend/src/storage/: db.rs  mod.rs  repository.rs
backend/src/user/: dto.rs  handler.rs  mod.rs  model.rs  repo.rs  routes.rs  service.rs
docs/: README.md  api.md  db.md  env_setup_vm.md  overview.md  project_structure.md  task.md
docs/api/: http-api.md
docs/architecture/: project-structure.md  technical-architecture.md
docs/design/: PROMPT.md  README.md
docs/postman/: README.md  (+3 more)
docs/product/: spec.md  (+7 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+75 files in other folders)
